--- a/config/nginx/account.conf
+++ b/config/nginx/account.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name account.pretendo.cc c.account.pretendo.cc conntest.pretendo.cc
     cbvc.cdn.pretendo.cc nasc.pretendo.cc datastore.pretendo.cc api.pretendo.cc
-    assets.pretendo.cc;
+    assets.pretendo.cc account.nintendo.net conntest.nintendowifi.net;
 
     # This prevents nginx from exiting on startup if it can't resolve the upstream
     set $upstream http://account:8080;
