--- a/.gitmodules
+++ b/.gitmodules
@@ -75,5 +75,7 @@ branch = master
 ignore = dirty
 
 [submodule "repos/splatoon"]
-	path = repos/splatoon
-	url = https://github.com/ashquarky/splatoon
+path = repos/splatoon
+url = https://github.com/ashquarky/splatoon
+branch = master
+ignore = dirty
