added minecraft-wiiu submoudle

--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@ path = repos/splatoon
 url = https://github.com/ashquarky/splatoon
 branch = master
 ignore = dirty
+[submodule "repos/minecraft-wiiu"]
+	path = repos/minecraft-wiiu
+	url = https://github.com/pretendonetwork/minecraft-wiiu
