--- a/environment/juxtaposition-ui.env
+++ b/environment/juxtaposition-ui.env
@@ -1,5 +1,6 @@
 JUXT_CONFIG_HTTP_PORT=8080
-JUXT_CONFIG_MONGODB_URI=mongodb://mongodb:27017/pretendo_miiverse?replicaSet=rs
+JUXT_CONFIG_MONGODB_URI=mongodb://mongodb:27017
+JUXT_CONFIG_MONGODB_DATABASE=pretendo_miiverse?replicaSet=rs
 JUXT_CONFIG_SERVER_ENVIRONMENT=prod
 JUXT_CONFIG_CDN_DOMAIN=
 JUXT_CONFIG_MII_IMAGE_CDN=mii.olv.pretendo.cc
