Switch the account server to use cdn.pretendo.cc

--- a/environment/account.env
+++ b/environment/account.env
@@ -8,7 +8,7 @@ PN_ACT_CONFIG_WEBSITE_BASE=https://pretendo.network
 PN_ACT_CONFIG_REDIS_URL=redis://redis:6379
 PN_ACT_CONFIG_S3_ENDPOINT=http://minio.pretendo.cc
 PN_ACT_CONFIG_S3_ACCESS_KEY=minio_pretendo
-PN_ACT_CONFIG_CDN_BASE_URL=http://pretendo-cdn.b-cdn.net
+PN_ACT_CONFIG_CDN_BASE_URL=http://cdn.pretendo.cc
 PN_ACT_CONFIG_CDN_SUBDOMAIN=cdn
 PN_ACT_CONFIG_EMAIL_HOST=mailpit
 PN_ACT_CONFIG_EMAIL_PORT=1025
