Make Go debugger configuration consistent

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -88,6 +88,33 @@
             "debugAdapter": "legacy",
             "port": 2348,
             "host": "127.0.0.1"
+        },
+        {
+            "type": "go",
+            "request": "attach",
+            "name": "Debug splatoon",
+            "mode": "remote",
+            "debugAdapter": "legacy",
+            "port": 2349,
+            "host": "127.0.0.1"
+        },
+        {
+            "type": "go",
+            "request": "attach",
+            "name": "Debug minecraft-wiiu",
+            "mode": "remote",
+            "debugAdapter": "legacy",
+            "port": 2350,
+            "host": "127.0.0.1"
+        },
+        {
+            "type": "go",
+            "request": "attach",
+            "name": "Debug pikmin-3",
+            "mode": "remote",
+            "debugAdapter": "legacy",
+            "port": 2351,
+            "host": "127.0.0.1"
         }
     ]
 }
