--- a/patches/friends/dockerfile-enable-debugging.patch
+++ b/patches/friends/dockerfile-enable-debugging.patch
@@ -1,8 +1,8 @@
 diff --git i/Dockerfile w/Dockerfile
-index 8d3c4c1..055911b 100644
+index 20b2b7a..60e3ee3 100644
 --- i/Dockerfile
 +++ w/Dockerfile
-@@ -9,6 +9,8 @@ ARG app_dir build_string=pretendo.friends.docker
+@@ -10,6 +10,8 @@ ARG build_string=pretendo.friends.docker
  
  WORKDIR ${app_dir}
  
@@ -11,7 +11,7 @@ index 8d3c4c1..055911b 100644
  RUN --mount=type=cache,target=/go/pkg/mod/ \
  	--mount=type=bind,source=go.sum,target=go.sum \
  	--mount=type=bind,source=go.mod,target=go.mod \
-@@ -16,7 +18,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
+@@ -17,7 +19,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
  
  COPY . .
  RUN --mount=type=cache,target=/go/pkg/mod/ \
@@ -20,7 +20,7 @@ index 8d3c4c1..055911b 100644
  
  
  # * Running the final application
-@@ -31,6 +33,7 @@ RUN chown go:go ${app_dir}/log
+@@ -31,6 +33,7 @@ RUN mkdir -p ${app_dir}/log && chown go:go ${app_dir}/log
  
  USER go
  
