--- a/patches/wiiu-chat-secure/dockerfile-enable-debugging.patch
+++ b/patches/wiiu-chat-secure/dockerfile-enable-debugging.patch
@@ -1,8 +1,8 @@
-diff --git a/Dockerfile b/Dockerfile
-index fb8db39..08da995 100644
---- a/Dockerfile
-+++ b/Dockerfile
-@@ -9,6 +9,8 @@ ARG app_dir
+diff --git i/Dockerfile w/Dockerfile
+index 20b2b7a..60e3ee3 100644
+--- i/Dockerfile
++++ w/Dockerfile
+@@ -10,6 +10,8 @@ ARG build_string=pretendo.friends.docker
  
  WORKDIR ${app_dir}
  
@@ -11,16 +11,16 @@ index fb8db39..08da995 100644
  RUN --mount=type=cache,target=/go/pkg/mod/ \
  	--mount=type=bind,source=go.sum,target=go.sum \
  	--mount=type=bind,source=go.mod,target=go.mod \
-@@ -16,7 +18,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
+@@ -17,7 +19,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
  
  COPY . .
  RUN --mount=type=cache,target=/go/pkg/mod/ \
--	CGO_ENABLED=0 go build -v -o ${app_dir}/build/server
-+	CGO_ENABLED=0 go build -v -o ${app_dir}/build/server -gcflags "all=-N -l"
+-	CGO_ENABLED=0 go build -v -o ${app_dir}/build/server -ldflags "-X 'main.serverBuildString=${build_string}'"
++	CGO_ENABLED=0 go build -v -o ${app_dir}/build/server -gcflags "all=-N -l" -ldflags "-X 'main.serverBuildString=${build_string}'"
  
  
  # * Running the final application
-@@ -30,6 +32,7 @@ RUN mkdir -p ${app_dir}/log && chown go:go ${app_dir}/log
+@@ -31,6 +33,7 @@ RUN mkdir -p ${app_dir}/log && chown go:go ${app_dir}/log
  
  USER go
  
@@ -28,4 +28,4 @@ index fb8db39..08da995 100644
  COPY --from=build ${app_dir}/build/server ${app_dir}/server
  
 -CMD [ "./server" ]
-+CMD ["./dlv", "exec", "./server", "--listen=:2347", "--headless", "--api-version=2", "--log", "--accept-multiclient", "--continue"]
++CMD ["./dlv", "exec", "./server", "--listen=:2345", "--headless", "--api-version=2", "--log", "--accept-multiclient", "--continue"]
