--- a/patches/splatoon/dockerfile-enable-debugging.patch
+++ b/patches/splatoon/dockerfile-enable-debugging.patch
@@ -1,5 +1,5 @@
 diff --git i/Dockerfile w/Dockerfile
-index 2a929a4..4aa6bbe 100644
+index fb8db39..93b708b 100644
 --- i/Dockerfile
 +++ w/Dockerfile
 @@ -9,6 +9,8 @@ ARG app_dir
@@ -11,16 +11,16 @@ index 2a929a4..4aa6bbe 100644
  RUN --mount=type=cache,target=/go/pkg/mod/ \
  	--mount=type=bind,source=go.sum,target=go.sum \
  	--mount=type=bind,source=go.mod,target=go.mod \
-@@ -17,7 +19,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
+@@ -16,7 +18,7 @@ RUN --mount=type=cache,target=/go/pkg/mod/ \
+ 
  COPY . .
- ARG BUILD_STRING=pretendo.supermariomaker.docker
  RUN --mount=type=cache,target=/go/pkg/mod/ \
--	CGO_ENABLED=0 go build -ldflags "-X 'main.serverBuildString=${BUILD_STRING}'" -v -o ${app_dir}/build/server
-+	CGO_ENABLED=0 go build -gcflags "all=-N -l" -ldflags "-X 'main.serverBuildString=${BUILD_STRING}'" -v -o ${app_dir}/build/server
+-	CGO_ENABLED=0 go build -v -o ${app_dir}/build/server
++	CGO_ENABLED=0 go build -gcflags "all=-N -l" -v -o ${app_dir}/build/server
  
  
  # * Running the final application
-@@ -33,4 +35,4 @@ USER go
+@@ -32,4 +34,4 @@ USER go
  
  COPY --from=build ${app_dir}/build/server ${app_dir}/server
  
