--- a/patches/splatoon/dockerfile-enable-debugging.patch
+++ b/patches/splatoon/dockerfile-enable-debugging.patch
@@ -1,5 +1,5 @@
 diff --git i/Dockerfile w/Dockerfile
-index fb8db39..93b708b 100644
+index fb8db39..0b4d0f4 100644
 --- i/Dockerfile
 +++ w/Dockerfile
 @@ -9,6 +9,8 @@ ARG app_dir
@@ -20,8 +20,11 @@ index fb8db39..93b708b 100644
  
  
  # * Running the final application
-@@ -32,4 +34,4 @@ USER go
+@@ -30,6 +32,7 @@ RUN mkdir -p ${app_dir}/log && chown go:go ${app_dir}/log
  
+ USER go
+ 
++COPY --from=build /go/bin/dlv ${app_dir}/dlv
  COPY --from=build ${app_dir}/build/server ${app_dir}/server
  
 -CMD [ "./server" ]
