--- a/patches/super-mario-maker/dockerfile-enable-debugging.patch
+++ b/patches/super-mario-maker/dockerfile-enable-debugging.patch
@@ -1,5 +1,5 @@
 diff --git i/Dockerfile w/Dockerfile
-index 2a929a4..4aa6bbe 100644
+index 2a929a4..05c0523 100644
 --- i/Dockerfile
 +++ w/Dockerfile
 @@ -9,6 +9,8 @@ ARG app_dir
@@ -20,8 +20,11 @@ index 2a929a4..4aa6bbe 100644
  
  
  # * Running the final application
-@@ -33,4 +35,4 @@ USER go
+@@ -31,6 +33,7 @@ RUN mkdir -p ${app_dir}/log && chown go:go ${app_dir}/log
  
+ USER go
+ 
++COPY --from=build /go/bin/dlv ${app_dir}/dlv
  COPY --from=build ${app_dir}/build/server ${app_dir}/server
  
 -CMD [ "./server" ]
