Update Super Mario Maker submodule and patches

--- a/environment/super-mario-maker.env
+++ b/environment/super-mario-maker.env
@@ -3,5 +3,6 @@ PN_SMM_SECURE_SERVER_PORT=6005
 PN_SMM_CONFIG_S3_ENDPOINT=minio.pretendo.cc
 PN_SMM_CONFIG_S3_ACCESS_KEY=minio_pretendo
 PN_SMM_CONFIG_S3_BUCKET=super-mario-maker
+PN_SMM_CONFIG_S3_SECURE=false
 PN_SMM_ACCOUNT_GRPC_HOST=account
 PN_SMM_ACCOUNT_GRPC_PORT=5000
